--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,335 @@
-/* место для вашего кода */
+
+.header {
+  font-size: 18px;
+  display: grid;
+  grid-template-columns: 3fr 1fr 3fr;
+  justify-content: space-between;
+  column-gap: 20px;
+  align-items: center;
+  padding: 97px 52px 92px 51px;
+}
+
+.header__menu {
+  display: flex;
+  justify-content: space-between;
+  letter-spacing: 1.1px;
+}
+
+.header__links-list {
+  line-height: 21.13px;
+  letter-spacing: 0.025em;
+  text-align: left;
+  display: flex;
+  gap: 32px;
+}
+
+.header__links-list-item {
+  list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link {
+  text-underline-offset: 4px;
+}
+
+.header__link_active {
+  text-decoration: none  ;
+}
+
+.header__logo {
+  justify-content: center;
+}
+
+.header__logo-image {
+  width:148px;
+  height:105px;
+}
+
+.header__address {
+  margin-left: 170px;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 1.35;
+}
+
+.cover {
+  min-height: 757px;
+  max-height: 757px;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  position: relative;
+  background-image: url(../images/cover.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.overlay {
+  inset: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0.6;
+}
+
+.cover__title {
+  padding: 165px 50px 50px;
+  color: #fff;
+  z-index: 1;
+  font-size: 100px;
+  font-weight: 700;
+  line-height: 1.15;
+  text-transform: uppercase;
+  letter-spacing: .3em;
+}
+
+/* текст-особенность */
+
+.aligned-text {
+  font-weight: 700;
+  display: block;
+  line-height: 115px;
+}
+
+.aligned-text_center {
+  padding-top: 12px;
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: end;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.cover__description {
+  margin-top: 85px;
+  display: inline-flex;
+  z-index: 1;
+  align-items: center;
+}
+
+.cover__description-text {
+  padding-right: 79px;
+  padding-left: 78px;
+  word-spacing: 0.9em;
+  z-index: 1;
+  font-size: 22px;
+  line-height: 28px;
+  text-transform: uppercase;
+  color: #fff;
+  word-spacing: 18px;
+}
+
+.bet-button {
+  color: #fff;
+  border: 1px solid currentColor;
+  font-family: inherit;
+  background-color: transparent;
+  padding: 12px 32px;
+  font-size: 22px;
+  text-transform: uppercase;
+}
+
+.lots__heading {
+  text-transform: uppercase;
+  padding-top: 179px;
+  padding-left: 64px;
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 27px;
+}
+
+.lots__card-list {
+  margin-bottom: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 24px;
+  margin-left: 24px;
+  margin-right: 24px;
+}
+
+.lots__card-list-item {
+    list-style: none;
+}
+
+.card-link {
+  text-decoration: none;
+  display: block;
+}
+
+.card {
+    line-height: 1.2;
+  color: #fff;
+  padding: 51px 40px 48px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 563px;
+  text-align: left;
+}
+
+.card_type_film,
+.card_type_book,
+.card_type_picture {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.card__title {
+  text-decoration: underline;
+  z-index: 1;
+  text-transform: uppercase;
+  font-size: 22px;
+  line-height: 26.4px;
+  text-align: left;
+}
+
+.card__text {
+  text-decoration: none;
+  z-index: 1;
+  text-align: left;
+  font-size: 20px;
+  }
+
+.lots__look-more-link {
+  text-underline-offset: 6px;
+  text-decoration-thickness: 1px;
+  margin-left: 64px;
+font-size: 20px;
+}
+
+
+
+
+/* об аукционе */
+
+.about {
+  min-height: 595px;
+  max-width: 1052px;
+  display: grid;
+  grid-template-columns: 1fr 2fr ;
+  margin-top: 183px;
+  justify-content: center;
+}
+
+
+.about__column {
+  justify-content: center;
+  padding-top: 101px;
+  
+}
+
+
+
+.about__logo {
+  margin-left: 30px;
+  color: #fff;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  background: #000;
+  display: flex;
+  justify-content: center;
+  justify-self: center;
+}
+
+.about__logo-image {
+  height: 114px;
+  width: 148px;
+  display: flex;
+  align-self: center;
+  }
+
+.about__title {
+  padding-left: 30px;
+  font-size: 40px;
+  line-height: 1.17;
+  text-transform: uppercase;
+}
+
+.about__text-top {
+  letter-spacing: 0.02em;
+  padding-top: 100px;
+  justify-content: left;
+  margin-bottom: 26px;
+}
+
+.about__text {
+  padding-left: 32px;
+  letter-spacing: 0.02em;
+  line-height: 1.17;
+  font-size: 20px;
+}
+
+.footer {
+  font-size: 18px;
+  justify-content: center;
+  align-items:flex-start;
+  display: flex;
+  margin-top: 148px;
+  justify-content: space-between;
+  margin-bottom: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.address {
+  font-style: normal;
+  font-family: inherit;
+  max-width: 230px;
+}
+
+.footer__menu {
+  display: flex;
+  justify-content: center;
+}
+
+.footer__menu-list-item {
+  list-style: none;
+}
+
+.footer__menu-link {
+  padding-left: 10px;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+
+.footer__social-list {
+  padding-bottom: 18px;
+  list-style: none;
+  display: inline-flex;
+  justify-content: center;
+  gap: 48px;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px; 
+}
