--- a/styles/style.css
+++ b/styles/style.css
@@ -2,11 +2,11 @@
 .header {
   font-size: 18px;
   display: grid;
-  grid-template-columns: 3fr 1fr 3fr;
+  grid-template-columns: 1fr min-content 1fr;
   justify-content: space-between;
   column-gap: 20px;
   align-items: center;
-  padding: 97px 52px 92px 51px;
+  padding: 92px 52px 92px 51px;
 }
 
 .header__menu {
@@ -36,7 +36,7 @@
 }
 
 .header__link_active {
-  text-decoration: none  ;
+  text-decoration: none;
 }
 
 .header__logo {
@@ -49,15 +49,11 @@
 }
 
 .header__address {
-  margin-left: 170px;
-  font-style: normal;
-  font-size: 18px;
-  line-height: 1.35;
+  justify-self: end;
 }
 
 .cover {
   min-height: 757px;
-  max-height: 757px;
   display: flex;
   position: relative;
   flex-direction: column;
@@ -70,8 +66,6 @@
 .overlay {
   inset: 0;
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   background-color: #000;
@@ -89,8 +83,6 @@
   letter-spacing: .3em;
 }
 
-/* текст-особенность */
-
 .aligned-text {
   font-weight: 700;
   display: block;
@@ -98,7 +90,7 @@
 }
 
 .aligned-text_center {
-  padding-top: 12px;
+  padding-top: 14px;
   text-align: center;
 }
 
@@ -115,13 +107,15 @@
 }
 
 .cover__description {
-  margin-top: 85px;
+  margin-top: 81px;
   display: inline-flex;
   z-index: 1;
   align-items: center;
 }
 
 .cover__description-text {
+  font-family: inherit;
+  font-weight: 400;
   padding-right: 79px;
   padding-left: 78px;
   word-spacing: 0.9em;
@@ -134,6 +128,7 @@
 }
 
 .bet-button {
+  font-family: Raleway, sans-serif;
   color: #fff;
   border: 1px solid currentColor;
   font-family: inherit;
@@ -162,7 +157,7 @@
 }
 
 .lots__card-list-item {
-    list-style: none;
+  list-style: none;
 }
 
 .card-link {
@@ -171,7 +166,7 @@
 }
 
 .card {
-    line-height: 1.2;
+  line-height: 1.2;
   color: #fff;
   padding: 51px 40px 48px 40px;
   display: flex;
@@ -179,11 +174,6 @@
   justify-content: space-between;
   min-height: 563px;
   text-align: left;
-}
-
-.card_type_film,
-.card_type_book,
-.card_type_picture {
   position: relative;
   background-size: cover;
   background-position: center;
@@ -221,34 +211,28 @@
   text-underline-offset: 6px;
   text-decoration-thickness: 1px;
   margin-left: 64px;
-font-size: 20px;
+  font-size: 20px;
+  line-height: 23.48px;
+  letter-spacing: 0.02em;
 }
 
-
-
-
-/* об аукционе */
-
 .about {
-  min-height: 595px;
-  max-width: 1052px;
+  margin-left: 24px;
+  margin-right: 24px;
   display: grid;
   grid-template-columns: 1fr 2fr ;
   margin-top: 183px;
   justify-content: center;
 }
 
-
 .about__column {
+  padding-left: 7px;
   justify-content: center;
   padding-top: 101px;
-  
 }
 
-
-
 .about__logo {
-  margin-left: 30px;
+  margin-right: 14px;
   color: #fff;
   width: 240px;
   height: 240px;
@@ -264,10 +248,9 @@ font-size: 20px;
   width: 148px;
   display: flex;
   align-self: center;
-  }
+}
 
 .about__title {
-  padding-left: 30px;
   font-size: 40px;
   line-height: 1.17;
   text-transform: uppercase;
@@ -275,13 +258,12 @@ font-size: 20px;
 
 .about__text-top {
   letter-spacing: 0.02em;
-  padding-top: 100px;
+  padding-top: 101px;
   justify-content: left;
   margin-bottom: 26px;
 }
 
 .about__text {
-  padding-left: 32px;
   letter-spacing: 0.02em;
   line-height: 1.17;
   font-size: 20px;
@@ -292,7 +274,7 @@ font-size: 20px;
   justify-content: center;
   align-items:flex-start;
   display: flex;
-  margin-top: 148px;
+  margin-top: 185px;
   justify-content: space-between;
   margin-bottom: 50px;
   padding-left: 50px;
@@ -301,8 +283,9 @@ font-size: 20px;
 
 .address {
   font-style: normal;
-  font-family: inherit;
-  max-width: 230px;
+  font-size: 18px;
+  line-height: 1.35;
+  max-width: 236px;
 }
 
 .footer__menu {
@@ -322,7 +305,7 @@ font-size: 20px;
 }
 
 .footer__social-list {
-  padding-bottom: 18px;
+  padding-bottom: 88px;
   list-style: none;
   display: inline-flex;
   justify-content: center;
